tests/compile_errors/tuple-shorthand-binary-index.buzz
// Tuple property shorthand only accepts indexes 0, 1, 2 or 3
test "Tuple shorthand rejects binary index" {
    final tuple = .{ 1, 2, 3, 4 };

    _ = tuple.0b10;
}
